--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
         </div>
         <div id='rectangle2' class='rectangle2'>
         </div>
-        <div id='receive' class='receive'>
-        Receive</div>
+        <button id='button' class='button'>Receive</button>
         <div id='rectangle22' class='rectangle22'>
         </div>
-        <div id='send' class='send'>
-        Send</div>
+        <button id='send' class='send'>Send</button>
         <div id='rectangle3' class='rectangle3'>
         </div>
         <div id='bani' class='bani'>
